unpackaged/main/default/objects/zkmulti__MCCheckpoint__c/zkmulti__MCCheckpoint__c.object-meta.xml
<CustomObject>
    <label>Checkpoint</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Checkpoint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkpoints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>