unpackaged/main/default/objects/zkmulti__MCCheckpoint__c/fields/zkmulti__Date_Time__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Date_Time__c</fullName>
    <label>Date Time</label>
    <type>DateTime</type>
</CustomField>