unpackaged/main/default/objects/zkmulti__MCCheckpoint__c/fields/zkmulti__LocationOnMap__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__LocationOnMap__c</fullName>
    <formula>IMAGE(&#39;https://maps.googleapis.com/maps/api/staticmap?key=AIzaSyCE2cR9HPgyprSO9rP6846gzDjs2UvY29A&amp;zoom=13&amp;size=300x200&amp;markers=color:green|label:S|&#39;+ TEXT(zkmulti__Geolocation__Latitude__s) + &#39;,&#39; + TEXT(zkmulti__Geolocation__Longitude__s), &#39;Location&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location on Map</label>
    <type>Text</type>
</CustomField>